working with csv files

--- a/13_Web_Scraping/Exercises.ipynb
+++ b/13_Web_Scraping/Exercises.ipynb
@@ -624,7 +624,7 @@
     "    res = requests.get(page_url)\n",
     "    \n",
     "    if \"No quotes found!\" in res.text:\n",
-    "        break\n",
+    "        page_valid = False\n",
     "    \n",
     "    soup = bs4.BeautifulSoup(res.text, 'lxml')\n",
     "    \n",
@@ -636,62 +636,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Albert Einstein',\n",
-       " 'Alexandre Dumas fils',\n",
-       " 'Alfred Tennyson',\n",
-       " 'Allen Saunders',\n",
-       " 'André Gide',\n",
-       " 'Ayn Rand',\n",
-       " 'Bob Marley',\n",
-       " 'C.S. Lewis',\n",
-       " 'Charles Bukowski',\n",
-       " 'Charles M. Schulz',\n",
-       " 'Douglas Adams',\n",
-       " 'Dr. Seuss',\n",
-       " 'E.E. Cummings',\n",
-       " 'Eleanor Roosevelt',\n",
-       " 'Elie Wiesel',\n",
-       " 'Ernest Hemingway',\n",
-       " 'Friedrich Nietzsche',\n",
-       " 'Garrison Keillor',\n",
-       " 'George Bernard Shaw',\n",
-       " 'George Carlin',\n",
-       " 'George Eliot',\n",
-       " 'George R.R. Martin',\n",
-       " 'Harper Lee',\n",
-       " 'Haruki Murakami',\n",
-       " 'Helen Keller',\n",
-       " 'J.D. Salinger',\n",
-       " 'J.K. Rowling',\n",
-       " 'J.M. Barrie',\n",
-       " 'J.R.R. Tolkien',\n",
-       " 'James Baldwin',\n",
-       " 'Jane Austen',\n",
-       " 'Jim Henson',\n",
-       " 'Jimi Hendrix',\n",
-       " 'John Lennon',\n",
-       " 'Jorge Luis Borges',\n",
-       " 'Khaled Hosseini',\n",
-       " \"Madeleine L'Engle\",\n",
-       " 'Marilyn Monroe',\n",
-       " 'Mark Twain',\n",
-       " 'Martin Luther King Jr.',\n",
-       " 'Mother Teresa',\n",
-       " 'Pablo Neruda',\n",
-       " 'Ralph Waldo Emerson',\n",
-       " 'Stephenie Meyer',\n",
-       " 'Steve Martin',\n",
-       " 'Suzanne Collins',\n",
-       " 'Terry Pratchett',\n",
-       " 'Thomas A. Edison',\n",
-       " 'W.C. Fields',\n",
-       " 'William Nicholson'}"
+       "True"
       ]
      },
      "execution_count": 20,
@@ -700,8 +658,15 @@
     }
    ],
    "source": [
-    "authors"
+    "not page_valid"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
