--- a/01_Python_Object_and_Data_Structure_Basics/Writing and Reading files.ipynb
+++ b/01_Python_Object_and_Data_Structure_Basics/Writing and Reading files.ipynb
@@ -305,9 +305,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello again,\n",
+      "I am a line on a new file\n",
+      "I can keep doings this until \n",
+      "Well.. . forever\n",
+      "I'm an appended line\n"
+     ]
+    }
+   ],
    "source": [
     "with open('my_new_file.txt', mode='r') as f:\n",
     "    print(f.read())"
@@ -315,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,9 +337,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello again,\n",
+      "I am a line on a new file\n",
+      "I can keep doings this until \n",
+      "Well.. . forever\n",
+      "I'm an appended line\n",
+      "I'm an appended line\n"
+     ]
+    }
+   ],
    "source": [
     "with open('my_new_file.txt') as f:\n",
     "    print(f.read())"
@@ -335,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,16 +380,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"I've created this file\""
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "new_file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,13 +410,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I've created this file\n",
+      "I'm an appended line\n"
+     ]
+    }
+   ],
    "source": [
     "with open('blahblah.txt', mode='r') as f:\n",
     "    print(f.read())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
