--- a/16_Email/Sending Email.ipynb
+++ b/16_Email/Sending Email.ipynb
@@ -70,7 +70,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What is your password: hello\n"
+      "What is your password: asdf\n"
      ]
     }
    ],
@@ -144,7 +144,7 @@
      "output_type": "stream",
      "text": [
       "enter the subject line: Python Email Test\n",
-      "enter the body message: i'm just a snowflake in July\n"
+      "enter the body message: my favorite colour is black\n"
      ]
     },
     {
@@ -178,7 +178,7 @@
     {
      "data": {
       "text/plain": [
-       "(221, b'2.0.0 closing connection o7sm16418161qki.63 - gsmtp')"
+       "(221, b'2.0.0 closing connection c26sm14886771qtj.92 - gsmtp')"
       ]
      },
      "execution_count": 10,
