--- a/02_Python_Comparison_Operators/Multiple Comparison Operators with Logical Operators.ipynb
+++ b/02_Python_Comparison_Operators/Multiple Comparison Operators with Logical Operators.ipynb
@@ -319,6 +319,33 @@
    "source": [
     "3 < 2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3 > 1 == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
