sets and tuples exercises

--- a/03_Python_Statements/Useful Operators.ipynb
+++ b/03_Python_Statements/Useful Operators.ipynb
@@ -76,7 +76,7 @@
    "source": [
     "word = 'abcde'\n",
     "\n",
-    "for index, letter in enumerate(word):\n",
+    "for (index, letter) in enumerate(word):\n",
     "    print(f'at index {index} the letter is {letter}')"
    ]
   },
