--- a/01_Python_Object_and_Data_Structure_Basics/Dictionaries.ipynb
+++ b/01_Python_Object_and_Data_Structure_Basics/Dictionaries.ipynb
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,6 +726,26 @@
     "str2 = '123'\n",
     "\n",
     "combo = { str1[i]: str2[i] for i in range(0, len(str1)) }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'A': '1', 'B': '2', 'C': '3'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict(zip(str1, str2))"
    ]
   },
   {
@@ -768,6 +788,29 @@
     "nums = [1, 2, 3, 4]\n",
     "\n",
     "{ num: ('even' if num % 2 == 0 else 'odd') for num in nums }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'MI': 'Michigan', 'AZ': 'Arizona', 'NY': 'New York', 'FL': 'Florida'}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state_abbr = ['MI', 'AZ', 'NY', 'FL']\n",
+    "state = ['Michigan', 'Arizona', 'New York', 'Florida']\n",
+    "\n",
+    "dict(zip(state_abbr, state))"
    ]
   },
   {
