list comprehension advanced problems

--- a/04_Methods_and_Functions/Function Exercices - Level Two.ipynb
+++ b/04_Methods_and_Functions/Function Exercices - Level Two.ipynb
@@ -50,9 +50,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Bust'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# given three integers between 1 and 11, return their sum if its less than or equal to 21. ->\n",
     "# -> if their sum exceeds 21 and there's an 11, reduce the total sum by 10 ->\n",
@@ -67,6 +78,26 @@
     "        return 'Bust'\n",
     "\n",
     "blackjack(10, 11, 11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "blackjack(10, 10, 11)"
    ]
   },
   {
