lambda in combination with map and filter

--- a/04_Methods_and_Functions/Function Exercices - Level Two.ipynb
+++ b/04_Methods_and_Functions/Function Exercices - Level Two.ipynb
@@ -56,7 +56,7 @@
     {
      "data": {
       "text/plain": [
-       "'Bust'"
+       "15"
       ]
      },
      "execution_count": 1,
@@ -66,7 +66,7 @@
    ],
    "source": [
     "# given three integers between 1 and 11, return their sum if its less than or equal to 21. ->\n",
-    "# -> if their sum exceeds 21 and there's an 11, reduce the total sum by 10 ->\n",
+    "# -> if their sum is between 22 and 31 and there's an 11, reduce the total sum by 10 ->\n",
     "# -> Finally, if the sum (even after, adjustment) exceeds 21, return 'BUST'\n",
     "\n",
     "def blackjack(a,b,c):\n",
@@ -77,7 +77,7 @@
     "    else:\n",
     "        return 'Bust'\n",
     "\n",
-    "blackjack(10, 11, 11)"
+    "blackjack(2, 2, 11)"
    ]
   },
   {
@@ -189,6 +189,42 @@
     "    charObj['chars'] = list(filter(lambda key: charMap[key] == charObj['eachCharMax'], charMap.keys()))\n",
     "    \n",
     "    return charObj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def maxChar(st):\n",
+    "    charObj = {\n",
+    "        \"chars\": [],\n",
+    "        \"eachCharMax\": 0\n",
+    "    }\n",
+    "    charMap = { letter: st.count(letter) for letter in st }\n",
+    "    \n",
+    "    charObj['eachCharMax'] = max(charMap.values())\n",
+    "    charObj['chars'] = list(filter(lambda key: charMap[key] == charObj['eachCharMax'], charMap.keys()))\n",
+    "    \n",
+    "    return charObj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'chars': ['p', 'i'], 'eachCharMax': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(maxChar('philip'))"
    ]
   }
  ],
