--- a/01_Python_Object_and_Data_Structure_Basics/String - Print Formatting.ipynb
+++ b/01_Python_Object_and_Data_Structure_Basics/String - Print Formatting.ipynb
@@ -148,10 +148,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The result was 0.13\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('The result was {:1.2f}'.format(100 / 777))"
+   ]
   },
   {
    "cell_type": "code",
