buil-in functions: sorted

--- a/04_Methods_and_Functions/Lambda and Built-In Functions/Any and All.ipynb
+++ b/04_Methods_and_Functions/Lambda and Built-In Functions/Any and All.ipynb
@@ -19,21 +19,41 @@
    ],
    "source": [
     "# all: returns true if all elements of an iterable are truthy\n",
+    "# list brackets are optional\n",
     "people = ['Charlie', 'Casey', 'Cody', 'Carly', 'Cristina']\n",
     "all([name[0] == 'C' for name in people])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f1d393aa",
+   "execution_count": 3,
+   "id": "cd11d6a8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# any: returns true if at least one element of an iterable is truthy\n",
     "people = ['Charlie', 'Casey', 'Cody', 'Carly', 'Cristina', 'Philip']\n",
-    "any([name[0] == 'O'])"
+    "any([name[0] == 'P' for name in people])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f05d05f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
