--- a/04_Methods_and_Functions/Lambda and Built-In Functions/Max and Min.ipynb
+++ b/04_Methods_and_Functions/Lambda and Built-In Functions/Max and Min.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "968d58d5",
    "metadata": {},
    "outputs": [
@@ -183,18 +183,18 @@
        "'Ollivander'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "max(names, key = lambda n: len(n))"
+    "max(names, key = lambda name: len(name))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "d36d73fe",
    "metadata": {},
    "outputs": [
@@ -204,13 +204,13 @@
        "'Tim'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "min(names, key = lambda n: len(n))"
+    "min(names, key = lambda name: len(name))"
    ]
   },
   {
