built-in functions: zip

--- a/04_Methods_and_Functions/Lambda and Built-In Functions/Abs, Sum, and Round.ipynb
+++ b/04_Methods_and_Functions/Lambda and Built-In Functions/Abs, Sum, and Round.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c4780827",
+   "id": "8487f39e",
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ea114b34",
+   "id": "8a103541",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5defe430",
+   "id": "a95629bb",
    "metadata": {},
    "outputs": [
     {
@@ -67,14 +67,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cb5068ef",
+   "execution_count": 10,
+   "id": "85d27f57",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20.13"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# round\n",
-    "round(20)"
+    "round(20.126, 2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d75fa51e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(10.65, None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "60aa4f6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(10.65)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ece60936",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
