--- a/04_Methods_and_Functions/Lambda and Built-In Functions/Zip.ipynb
+++ b/04_Methods_and_Functions/Lambda and Built-In Functions/Zip.ipynb
@@ -3,37 +3,24 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "099d51f4",
+   "id": "8614660a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 3, 5, 10]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# sorted works on any iterable\n",
-    "nums = [10, 3, 5, 1]\n",
-    "# returns a copy of the iterable, leaving the original unchanged\n",
-    "sorted(nums)"
+    "nums1 = [1, 2, 3, 4, 5]\n",
+    "nums2 = [6, 7, 8, 9, 10, 11, 12]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "559da0ab",
+   "id": "1d82af64",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[10, 5, 3, 1]"
+       "<zip at 0x1c78de36540>"
       ]
      },
      "execution_count": 2,
@@ -42,21 +29,19 @@
     }
    ],
    "source": [
-    "sorted(nums, reverse = True)"
+    "zip(nums1, nums2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0040e233",
+   "id": "5db3f83c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'name': 'Billy', 'age': 20, 'location': 'WI'},\n",
-       " {'name': 'Charlie', 'age': 35, 'location': 'HI'},\n",
-       " {'name': 'Philip', 'age': 38, 'location': 'MI'}]"
+       "[(1, 6), (2, 7), (3, 8), (4, 9), (5, 10)]"
       ]
      },
      "execution_count": 3,
@@ -65,35 +50,61 @@
     }
    ],
    "source": [
-    "users = [\n",
-    "    { 'name': 'Philip', 'age': 38, \"location\": 'MI' },\n",
-    "    { 'name': 'Charlie', 'age': 35, 'location': 'HI' },\n",
-    "    { 'name': 'Billy', 'age': 20, 'location': 'WI' }\n",
-    "]\n",
-    "# sort by user name (ascending)\n",
-    "sorted(users, key = lambda user: user['name'])"
+    "list(zip(nums1, nums2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "6a08f6bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nums = [1, 2, 4, 5, 6, 8, 10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "ebfd8d5a",
+   "execution_count": 4,
+   "id": "c5565db5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "{1: 6, 2: 7, 3: 8, 4: 9, 5: 10}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict(zip(nums1, nums2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "95c5b2c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((1, 6), (2, 7), (3, 8), (4, 9), (5, 10))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tuple(zip(nums1, nums2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5933ce41",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 1, 2, 3, 4), (1, 2, 3, 4, 5)]"
       ]
      },
      "execution_count": 6,
@@ -102,13 +113,14 @@
     }
    ],
    "source": [
-    "2 in nums"
+    "five_by_two = [(0, 1), (1, 2), (2, 3), (3, 4), (4, 5)]\n",
+    "list(zip(*five_by_two))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d123666",
+   "id": "ec750417",
    "metadata": {},
    "outputs": [],
    "source": []
