built-in functions: zip

--- a/04_Methods_and_Functions/Lambda and Built-In Functions/Zip.ipynb
+++ b/04_Methods_and_Functions/Lambda and Built-In Functions/Zip.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "8614660a",
+   "execution_count": null,
+   "id": "cfbcfc05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,105 +13,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "1d82af64",
+   "execution_count": null,
+   "id": "b20c7ccf",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<zip at 0x1c78de36540>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "zip(nums1, nums2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "5db3f83c",
+   "execution_count": null,
+   "id": "5af29dd1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1, 6), (2, 7), (3, 8), (4, 9), (5, 10)]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "list(zip(nums1, nums2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c5565db5",
+   "execution_count": null,
+   "id": "f23a940b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{1: 6, 2: 7, 3: 8, 4: 9, 5: 10}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dict(zip(nums1, nums2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "95c5b2c8",
+   "execution_count": null,
+   "id": "8c93f463",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((1, 6), (2, 7), (3, 8), (4, 9), (5, 10))"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tuple(zip(nums1, nums2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "5933ce41",
+   "execution_count": null,
+   "id": "1126a783",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(0, 1, 2, 3, 4), (1, 2, 3, 4, 5)]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "five_by_two = [(0, 1), (1, 2), (2, 3), (3, 4), (4, 5)]\n",
     "list(zip(*five_by_two))"
@@ -119,8 +64,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "765779fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'dan': 98, 'ang': 91, 'kate': 78}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "midterms = [80, 91, 78]\n",
+    "finals = [98, 89, 54]\n",
+    "students = ['dan', 'ang', 'kate']\n",
+    "\n",
+    "highest_grades = {student: max(midterm, finals) for (student, midterm, finals) in zip(students, midterms, finals)}\n",
+    "highest_grades"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ec750417",
+   "id": "0c687068",
    "metadata": {},
    "outputs": [],
    "source": []
