http requests: making a request with the requests module

--- a/07_Modules_and_Packages/Built-In Modules.ipynb
+++ b/07_Modules_and_Packages/Built-In Modules.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "ac01cb12",
+   "execution_count": 9,
+   "id": "2d038da6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random"
+    "from random import choice, randint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "987ded6b",
+   "execution_count": 10,
+   "id": "f14ab009",
    "metadata": {},
    "outputs": [
     {
@@ -22,47 +22,179 @@
        "'Tomato'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "random.choice(['Apple', 'Orange', 'Kiwi', 'Tomato'])"
+    "choice(['Apple', 'Orange', 'Kiwi', 'Tomato'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "fa92a59d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "countries = ['USA', 'China', 'Germany', 'Chile', 'Ecuador']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "e2490e86",
+   "execution_count": 11,
+   "id": "ae2ff85d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(random.shuffle(countries))"
+    "randint(1, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7599ecb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keyword import iskeyword"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4beb3f5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iskeyword('for')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8857dac7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = iskeyword('lambda')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "198d0ddc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bool"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "597338aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stuff(*args):\n",
+    "    for string in args:\n",
+    "        if iskeyword(string):\n",
+    "            return True\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0fb4ff1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stuff('def', 'hello', 'dog')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "46f52dfc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stuff('null', 'undefined', 'stuff')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4f7b3d8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stuff('hello', 'del')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf2a62a7",
+   "id": "72e11800",
    "metadata": {},
    "outputs": [],
    "source": []
