http requests mini-project

--- a/08_Errors_and_Exceptions/Untitled.ipynb
+++ b/08_Errors_and_Exceptions/Untitled.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,11 +41,27 @@
     "            num_sqr = int(input(\"Enter a number: \"))**2\n",
     "        except:\n",
     "            print(\"I said a number!\")\n",
-    "            continue\n",
     "        else:\n",
     "            break\n",
+    "            \n",
     "    return f\"Thanks. Your number squared is: {num_sqr}\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ask()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
